# fin-rag-system

./: .gitignore  agent_memory.db  ask_cfo.py  prove_tracks.py  pyproject.toml  run_pipeline.py  test_agent_tools.py  test_cfo.py  test_graph.py  test_ollama_tools.py
app/: main.py
app/agent/: guardrails.py  react_agent.py  schema_context.py  tools.py
app/agent/graph/: cfo_graph.py  finance_graph.py  llm.py  state.py
app/core/: config.py  exception_handlers.py
app/pipeline/: orchestrator.py  runner.py
app/repositories/: bank_feed_repo.py  chart_of_accounts_repo.py  master_directory_repo.py  raw_invoices_repo.py  transaction_repo.py
app/schemas/: error.py
app/utils/: logger.py
app/vector/: search.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/activity/: page.tsx
frontend/src/app/(app)/bank-feed/: page.tsx
frontend/src/app/bank-feed/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/subledger/: page.tsx
frontend/src/components/: AppShell.tsx  BulkUpload.tsx  DateField.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
sql/: README.md
sql/gold/: 03_gold_monthly_summary.sql  04_usp_build_monthly_summary.sql  05_gold_cash_position.sql  06_usp_build_cash_position.sql  07_gold_vendor_spend.sql  08_usp_build_vendor_spend.sql  09_gold_payables_aging.sql  10_usp_build_payables_aging.sql  11_gold_cash_runaway.sql  12_usp_build_cash_runaway.sql
sql/infrastructure/: 01_create_etl_tables.sql
sql/silver/: 01_silver_subledger.sql  02_usp_transform_subledger.sql
(+5 files in other folders)
